# delta-optim

./: .gitignore  COMPARISON_1.md  README.md  here.json  pyproject.toml
RESULTS/: COMP_DELTA_COMPACT.md  COMP_DELTA_RAW.md  CREATE_COMPACT_TABLES.md  DATA.md
src/delta_optim/: __init__.py  constant.py  domain.py  job_compact_delta.py  job_create_delta.py  job_query_delta.py  sb.py  sb_2.py
src/delta_optim/srv/: __init__.py  compact.py  construct.py  create.py  produce.py  query.py  records_producer.py  spark_session.py  table.py  utils.py  zorder.py
src/delta_optim/srv/query/: __init__.py  _duckdb.py  _polars.py  _spark.py  _utils.py
src/delta_optim/srv/table/: __init__.py  _clone.py  io.py  rs.py
