[project]
name = "delta-optim"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Sebastien VEY", email = "sebvey@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "deltalake>=0.22.0",
    "duckdb>=1.1.3",
    "marimo>=0.9.27",
    "polars>=1.15.0",
    "timeit-decorator>=1.1.1",
    "xfp>=1.0.0",
]

[project.scripts]
delta-optim = "delta_optim:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
